--- a/vercel.json
+++ b/vercel.json
@@ -3,16 +3,5 @@
   "buildCommand": "./build-vercel.sh",
   "outputDirectory": "public",
   "installCommand": "",
-  "framework": null,
-  "functions": {
-    "api/test.py": {
-      "runtime": "python3.9"
-    }
-  },
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
-    }
-  ]
+  "framework": null
 }
