--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -3,9 +3,9 @@ services:
     name: campus-workflow-backend
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn --bind 0.0.0.0:$PORT app:app"
+    startCommand: "gunicorn app:app --bind=0.0.0.0:${PORT}"
     envVars:
       - key: FLASK_ENV
         value: production
       - key: GOOGLE_API_KEY
-        sync: false  # You'll need to set this in Render dashboard
+        sync: false
