--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -3,7 +3,7 @@ services:
     name: campus-workflow-backend
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn app:app --bind=0.0.0.0:${PORT}"
+    startCommand: "gunicorn app:app --bind=0.0.0.0:$PORT"
     envVars:
       - key: FLASK_ENV
         value: production
